--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-19 02:48 -->
+<!-- 2022-11-20 02:45 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1004d72">1. 暑假</a>
+<li><a href="#org19d4958">1. 暑假</a>
 <ul>
-<li><a href="#org715b3f7">1.1. 夏令营</a></li>
+<li><a href="#orga384879">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgf4db353">2. 打工</a></li>
-<li><a href="#orgbcca264">3. 我的928</a>
+<li><a href="#org5f808db">2. 打工</a></li>
+<li><a href="#orgea8515a">3. 我的928</a>
 <ul>
-<li><a href="#org5510bd9">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org0669829">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orgfba1205">4. 他们的928</a></li>
-<li><a href="#org945f5ac">5. 总结</a></li>
+<li><a href="#org385fbd9">4. 他们的928</a></li>
+<li><a href="#orgdb88cc8">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org36bfbdb">
+<figure id="org5ac7e3e">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org1004d72" class="outline-2">
-<h2 id="org1004d72"><span class="section-number-2">1.</span> <a href="#org1004d72">暑假</a></h2>
+<div id="outline-container-org19d4958" class="outline-2">
+<h2 id="org19d4958"><span class="section-number-2">1.</span> <a href="#org19d4958">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org715b3f7" class="outline-3">
-<h3 id="org715b3f7"><span class="section-number-3">1.1.</span> <a href="#org715b3f7">夏令营</a></h3>
+<div id="outline-container-orga384879" class="outline-3">
+<h3 id="orga384879"><span class="section-number-3">1.1.</span> <a href="#orga384879">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgf4db353" class="outline-2">
-<h2 id="orgf4db353"><span class="section-number-2">2.</span> <a href="#orgf4db353">打工</a></h2>
+<div id="outline-container-org5f808db" class="outline-2">
+<h2 id="org5f808db"><span class="section-number-2">2.</span> <a href="#org5f808db">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgbcca264" class="outline-2">
-<h2 id="orgbcca264"><span class="section-number-2">3.</span> <a href="#orgbcca264">我的928</a></h2>
+<div id="outline-container-orgea8515a" class="outline-2">
+<h2 id="orgea8515a"><span class="section-number-2">3.</span> <a href="#orgea8515a">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org5510bd9" class="outline-3">
-<h3 id="org5510bd9"><span class="section-number-3">3.1.</span> <a href="#org5510bd9">928演唱会(bushi</a></h3>
+<div id="outline-container-org0669829" class="outline-3">
+<h3 id="org0669829"><span class="section-number-3">3.1.</span> <a href="#org0669829">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgb26ad21">
+<figure id="org9ed758b">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org268980e">
+<figure id="org1fd5e34">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgfba1205" class="outline-2">
-<h2 id="orgfba1205"><span class="section-number-2">4.</span> <a href="#orgfba1205">他们的928</a></h2>
+<div id="outline-container-org385fbd9" class="outline-2">
+<h2 id="org385fbd9"><span class="section-number-2">4.</span> <a href="#org385fbd9">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org945f5ac" class="outline-2">
-<h2 id="org945f5ac"><span class="section-number-2">5.</span> <a href="#org945f5ac">总结</a></h2>
+<div id="outline-container-orgdb88cc8" class="outline-2">
+<h2 id="orgdb88cc8"><span class="section-number-2">5.</span> <a href="#orgdb88cc8">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-19 02:48</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-20 02:45</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
