--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-21 18:06 -->
+<!-- 2022-11-22 02:48 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgfa0aa90">1. 暑假</a>
+<li><a href="#orgb3b8b70">1. 暑假</a>
 <ul>
-<li><a href="#org1454548">1.1. 夏令营</a></li>
+<li><a href="#orgf5aa70b">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org39c3cbf">2. 打工</a></li>
-<li><a href="#org8f3a742">3. 我的928</a>
+<li><a href="#orgbb75c5b">2. 打工</a></li>
+<li><a href="#org1a4a09a">3. 我的928</a>
 <ul>
-<li><a href="#org507097e">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org767af98">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org623cc5a">4. 他们的928</a></li>
-<li><a href="#org1a92fe3">5. 总结</a></li>
+<li><a href="#org2575e4d">4. 他们的928</a></li>
+<li><a href="#orgb9eeef8">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="orge01b84b">
+<figure id="orgf770614">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orgfa0aa90" class="outline-2">
-<h2 id="orgfa0aa90"><span class="section-number-2">1.</span> <a href="#orgfa0aa90">暑假</a></h2>
+<div id="outline-container-orgb3b8b70" class="outline-2">
+<h2 id="orgb3b8b70"><span class="section-number-2">1.</span> <a href="#orgb3b8b70">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org1454548" class="outline-3">
-<h3 id="org1454548"><span class="section-number-3">1.1.</span> <a href="#org1454548">夏令营</a></h3>
+<div id="outline-container-orgf5aa70b" class="outline-3">
+<h3 id="orgf5aa70b"><span class="section-number-3">1.1.</span> <a href="#orgf5aa70b">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org39c3cbf" class="outline-2">
-<h2 id="org39c3cbf"><span class="section-number-2">2.</span> <a href="#org39c3cbf">打工</a></h2>
+<div id="outline-container-orgbb75c5b" class="outline-2">
+<h2 id="orgbb75c5b"><span class="section-number-2">2.</span> <a href="#orgbb75c5b">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org8f3a742" class="outline-2">
-<h2 id="org8f3a742"><span class="section-number-2">3.</span> <a href="#org8f3a742">我的928</a></h2>
+<div id="outline-container-org1a4a09a" class="outline-2">
+<h2 id="org1a4a09a"><span class="section-number-2">3.</span> <a href="#org1a4a09a">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org507097e" class="outline-3">
-<h3 id="org507097e"><span class="section-number-3">3.1.</span> <a href="#org507097e">928演唱会(bushi</a></h3>
+<div id="outline-container-org767af98" class="outline-3">
+<h3 id="org767af98"><span class="section-number-3">3.1.</span> <a href="#org767af98">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org3a4ec22">
+<figure id="orgdc3668e">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgfff27f7">
+<figure id="orge843906">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org623cc5a" class="outline-2">
-<h2 id="org623cc5a"><span class="section-number-2">4.</span> <a href="#org623cc5a">他们的928</a></h2>
+<div id="outline-container-org2575e4d" class="outline-2">
+<h2 id="org2575e4d"><span class="section-number-2">4.</span> <a href="#org2575e4d">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org1a92fe3" class="outline-2">
-<h2 id="org1a92fe3"><span class="section-number-2">5.</span> <a href="#org1a92fe3">总结</a></h2>
+<div id="outline-container-orgb9eeef8" class="outline-2">
+<h2 id="orgb9eeef8"><span class="section-number-2">5.</span> <a href="#orgb9eeef8">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-21 18:06</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-22 02:48</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
