Update from https://github.com/thebesttv/eserver-static/commit/3b1888ab0de01bc7c92b9849e1cbb076ee9dcb0c

--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-23 02:48 -->
+<!-- 2022-11-24 02:45 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,14 +45,14 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgcea71ad">1. 推送</a></li>
+<li><a href="#org8bd5035">1. 推送</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgcea71ad" class="outline-2">
-<h2 id="orgcea71ad"><span class="section-number-2">1.</span> <a href="#orgcea71ad">推送</a></h2>
+<div id="outline-container-org8bd5035" class="outline-2">
+<h2 id="org8bd5035"><span class="section-number-2">1.</span> <a href="#org8bd5035">推送</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -67,7 +67,7 @@
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-11-22 20:14</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-23 02:48</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-24 02:45</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
 </table>
