--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-23 02:48 -->
+<!-- 2022-11-24 02:45 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org751e4ce">1. What is Vectored IO</a></li>
-<li><a href="#org3cb5c56">2. Vectored IO in Linux</a></li>
-<li><a href="#orged67c85">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#org6abb6a1">4. Examples</a>
+<li><a href="#org1cf741f">1. What is Vectored IO</a></li>
+<li><a href="#orgd41bf2a">2. Vectored IO in Linux</a></li>
+<li><a href="#org917e605">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#org2800cad">4. Examples</a>
 <ul>
-<li><a href="#org04391fa">4.1. <code>write()</code></a></li>
-<li><a href="#org859bc0e">4.2. <code>writev()</code></a></li>
+<li><a href="#orga2323ff">4.1. <code>write()</code></a></li>
+<li><a href="#org1ea705f">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-org751e4ce" class="outline-2">
-<h2 id="org751e4ce"><span class="section-number-2">1.</span> <a href="#org751e4ce">What is Vectored IO</a></h2>
+<div id="outline-container-org1cf741f" class="outline-2">
+<h2 id="org1cf741f"><span class="section-number-2">1.</span> <a href="#org1cf741f">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-org3cb5c56" class="outline-2">
-<h2 id="org3cb5c56"><span class="section-number-2">2.</span> <a href="#org3cb5c56">Vectored IO in Linux</a></h2>
+<div id="outline-container-orgd41bf2a" class="outline-2">
+<h2 id="orgd41bf2a"><span class="section-number-2">2.</span> <a href="#orgd41bf2a">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-orged67c85" class="outline-2">
-<h2 id="orged67c85"><span class="section-number-2">3.</span> <a href="#orged67c85">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org917e605" class="outline-2">
+<h2 id="org917e605"><span class="section-number-2">3.</span> <a href="#org917e605">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-org6abb6a1" class="outline-2">
-<h2 id="org6abb6a1"><span class="section-number-2">4.</span> <a href="#org6abb6a1">Examples</a></h2>
+<div id="outline-container-org2800cad" class="outline-2">
+<h2 id="org2800cad"><span class="section-number-2">4.</span> <a href="#org2800cad">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org04391fa" class="outline-3">
-<h3 id="org04391fa"><span class="section-number-3">4.1.</span> <a href="#org04391fa"><code>write()</code></a></h3>
+<div id="outline-container-orga2323ff" class="outline-3">
+<h3 id="orga2323ff"><span class="section-number-3">4.1.</span> <a href="#orga2323ff"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-org859bc0e" class="outline-3">
-<h3 id="org859bc0e"><span class="section-number-3">4.2.</span> <a href="#org859bc0e"><code>writev()</code></a></h3>
+<div id="outline-container-org1ea705f" class="outline-3">
+<h3 id="org1ea705f"><span class="section-number-3">4.2.</span> <a href="#org1ea705f"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-23 02:48</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-24 02:45</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
