--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-23 02:48 -->
+<!-- 2022-11-24 02:45 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -46,12 +46,12 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0f4424f">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#org4e99685">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org702ce98">1.1. window config &amp; register</a></li>
-<li><a href="#org9d8b0fe">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#org84a456d">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#org6f51406">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#orgb1dfd7e">1.1. window config &amp; register</a></li>
+<li><a href="#orgfc3f4e3">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#orgfb32670">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#orgd7e619e">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -59,12 +59,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org0f4424f" class="outline-2">
-<h2 id="org0f4424f"><span class="section-number-2">1.</span> <a href="#org0f4424f">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-org4e99685" class="outline-2">
+<h2 id="org4e99685"><span class="section-number-2">1.</span> <a href="#org4e99685">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org702ce98" class="outline-3">
-<h3 id="org702ce98"><span class="section-number-3">1.1.</span> <a href="#org702ce98">window config &amp; register</a></h3>
+<div id="outline-container-orgb1dfd7e" class="outline-3">
+<h3 id="orgb1dfd7e"><span class="section-number-3">1.1.</span> <a href="#orgb1dfd7e">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -78,8 +78,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-org9d8b0fe" class="outline-3">
-<h3 id="org9d8b0fe"><span class="section-number-3">1.2.</span> <a href="#org9d8b0fe"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-orgfc3f4e3" class="outline-3">
+<h3 id="orgfc3f4e3"><span class="section-number-3">1.2.</span> <a href="#orgfc3f4e3"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -102,8 +102,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org84a456d" class="outline-3">
-<h3 id="org84a456d"><span class="section-number-3">1.3.</span> <a href="#org84a456d"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-orgfb32670" class="outline-3">
+<h3 id="orgfb32670"><span class="section-number-3">1.3.</span> <a href="#orgfb32670"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -116,8 +116,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org6f51406" class="outline-3">
-<h3 id="org6f51406"><span class="section-number-3">1.4.</span> <a href="#org6f51406"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-orgd7e619e" class="outline-3">
+<h3 id="orgd7e619e"><span class="section-number-3">1.4.</span> <a href="#orgd7e619e"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -136,7 +136,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-23 02:48</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-24 02:45</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
