--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-23 02:48 -->
+<!-- 2022-11-24 02:45 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org975c866">1. 暑假</a>
+<li><a href="#org45c0d97">1. 暑假</a>
 <ul>
-<li><a href="#orgfe090ac">1.1. 夏令营</a></li>
+<li><a href="#org3ddf126">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org6a58937">2. 打工</a></li>
-<li><a href="#org7af9df2">3. 我的928</a>
+<li><a href="#org88a1788">2. 打工</a></li>
+<li><a href="#org5ef681f">3. 我的928</a>
 <ul>
-<li><a href="#orgedfd5fa">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org4009206">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org302ac04">4. 他们的928</a></li>
-<li><a href="#orgb9ab03b">5. 总结</a></li>
+<li><a href="#org5e2c3e0">4. 他们的928</a></li>
+<li><a href="#orgefb9536">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org92aaedb">
+<figure id="org66a677e">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org975c866" class="outline-2">
-<h2 id="org975c866"><span class="section-number-2">1.</span> <a href="#org975c866">暑假</a></h2>
+<div id="outline-container-org45c0d97" class="outline-2">
+<h2 id="org45c0d97"><span class="section-number-2">1.</span> <a href="#org45c0d97">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgfe090ac" class="outline-3">
-<h3 id="orgfe090ac"><span class="section-number-3">1.1.</span> <a href="#orgfe090ac">夏令营</a></h3>
+<div id="outline-container-org3ddf126" class="outline-3">
+<h3 id="org3ddf126"><span class="section-number-3">1.1.</span> <a href="#org3ddf126">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org6a58937" class="outline-2">
-<h2 id="org6a58937"><span class="section-number-2">2.</span> <a href="#org6a58937">打工</a></h2>
+<div id="outline-container-org88a1788" class="outline-2">
+<h2 id="org88a1788"><span class="section-number-2">2.</span> <a href="#org88a1788">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org7af9df2" class="outline-2">
-<h2 id="org7af9df2"><span class="section-number-2">3.</span> <a href="#org7af9df2">我的928</a></h2>
+<div id="outline-container-org5ef681f" class="outline-2">
+<h2 id="org5ef681f"><span class="section-number-2">3.</span> <a href="#org5ef681f">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orgedfd5fa" class="outline-3">
-<h3 id="orgedfd5fa"><span class="section-number-3">3.1.</span> <a href="#orgedfd5fa">928演唱会(bushi</a></h3>
+<div id="outline-container-org4009206" class="outline-3">
+<h3 id="org4009206"><span class="section-number-3">3.1.</span> <a href="#org4009206">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgdd08ce2">
+<figure id="org8e330d7">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org7231dea">
+<figure id="orga1013da">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org302ac04" class="outline-2">
-<h2 id="org302ac04"><span class="section-number-2">4.</span> <a href="#org302ac04">他们的928</a></h2>
+<div id="outline-container-org5e2c3e0" class="outline-2">
+<h2 id="org5e2c3e0"><span class="section-number-2">4.</span> <a href="#org5e2c3e0">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgb9ab03b" class="outline-2">
-<h2 id="orgb9ab03b"><span class="section-number-2">5.</span> <a href="#orgb9ab03b">总结</a></h2>
+<div id="outline-container-orgefb9536" class="outline-2">
+<h2 id="orgefb9536"><span class="section-number-2">5.</span> <a href="#orgefb9536">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-23 02:48</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-24 02:45</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
